--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -116,3 +116,4 @@ transition:all 0.3s ease;
 
 a.log{color: darkorange}
 div.login{height: 10px; alignment-adjust: middle; float: right; margin-left: 10px}
+.ingre_step img{width:60%;height:auto;}
