--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -117,3 +117,26 @@ transition:all 0.3s ease;
 a.log{color: darkorange}
 div.login{height: 10px; alignment-adjust: middle; float: right; margin-left: 10px}
 .ingre_step img{width:60%;height:auto;}
+.main_button{    margin: 10px;
+    background: #AFAFAF;
+    border: 1px solid #A1A1A1;
+    color: white;
+    padding: 10px;
+    border-radius: 5px;font-weight: bold;}
+.main_button:hover {-o-transition: all 0.3s ease;
+	-webkit-transition: all 0.3s ease;
+transition:all 0.3s ease;
+    background: orange;
+    border-color: #FF7E00;
+}
+.pagination {margin:0;padding:0;list-style: none;float:right;background: white;border:3px solid #dedede;border-radius:5px;padding:5px;}
+.pagination li{float:left;border:1px solid orange;border-radius: 19px;padding:2px;margin:0 5px;    height: 15px;
+    width: 15px;
+    text-align: center;font-weight:bold;-o-transition: all 0.3s ease;
+	-webkit-transition: all 0.3s ease;
+transition:all 0.3s ease}
+.pagination a{text-decoration: none;color:rgb(77, 77, 77);}
+.pagination li:hover {background: grey;}
+.pagination li:hover a{color:white;}
+.pagination .active {background: orange;color:white;}
+.navbar_action .active {background: orange;}
