--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -83,9 +83,9 @@ transition:all 0.3s ease;
 }
 .form_recipe *{font-size:13px;font-family: 'Source Sans Pro', Arial;}
 .form_recipe {margin:10px;padding:15px;background:white;border:5px solid #dedede;border-radius: 5px;}
-.form_recipe label {margin:10px 0;float:left;}
-.form_recipe .textboxinput {}
-.form_recipe .textareainput {}
+.form_recipe label {margin:10px 0;display: inline-block;min-width:200px;text-align: right;font-weight: bold;padding-right:10px;}
+.form_recipe .textboxinput {border:1px solid #dedede;border-radius: 5px;width:300px;padding:5px;}
+.form_recipe .textareainput {border:1px solid #dedede;border-radius: 5px;width:300px;padding:5px;}
 .clear {clear:both}
 /* --------------------------Linh -----------------------------------------------------------*/
 div.login-admin-error-msg{position: absolute; color: red;margin-top: -33px;}
