--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -87,6 +87,8 @@ transition:all 0.3s ease;
 .form_recipe .textboxinput {border:1px solid #dedede;border-radius: 5px;width:300px;padding:5px;}
 .form_recipe .textareainput {border:1px solid #dedede;border-radius: 5px;width:300px;padding:5px;}
 .clear {clear:both}
+#gridingre a{border:1px solid #a1a1a1;background: #dedede;border-radius: 5px;margin:10px;padding:5px;cursor:pointer;}
+#gridingre a:hover{background: orange;}
 /* --------------------------Linh -----------------------------------------------------------*/
 div.login-admin-error-msg{position: absolute; color: red;margin-top: -33px;}
 a.log{font-size: 13px !important; color: lawngreen;text-decoration: underline !important}
