--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -6,9 +6,10 @@ and open the template in the editor.
 /* 
     Created on : 15-Oct-2015, 6:50:07 PM
     Author     : khai
+
+ssssssssss
 */
 /*Main elements*/
-
 body {margin: 0;padding:0;background:url(../images/body-tail.gif) #b2b2b2;}
 div {margin:0;padding:0;vertical-align: baseline;font-family: Arial, Helvetica, sans-serif;font-size: 12px;font-style: normal;font-variant: normal;font-weight: normal;}
 h3, p {margin:0;padding:0}
