--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -92,6 +92,16 @@ transition:all 0.3s ease;
 
 #gridstep a{border:1px solid #a1a1a1;background: #dedede;border-radius: 5px;margin:10px;padding:5px;cursor:pointer;}
 #gridstep a:hover{background: orange;}
+.pagination {margin:0;padding:0;list-style: none;float:right;background: white;border:3px solid #dedede;border-radius:5px;padding:5px;}
+.pagination li{float:left;border:1px solid orange;border-radius: 19px;padding:2px;margin:0 5px;    height: 15px;
+    width: 15px;
+    text-align: center;font-weight:bold;-o-transition: all 0.3s ease;
+	-webkit-transition: all 0.3s ease;
+transition:all 0.3s ease}
+.pagination a{text-decoration: none;color:rgb(77, 77, 77);}
+.pagination li:hover {background: grey;}
+.pagination li:hover a{color:white;}
+.pagination .active {background: orange;color:white;}
 /* --------------------------Linh -----------------------------------------------------------*/
 div.login-admin-error-msg{position: absolute; color: red;margin-top: -33px;}
 a.log{font-size: 13px !important; color: lawngreen;text-decoration: underline !important}
